[package]
name = "triton_client"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12.*"
tokio = { version = "1.*", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.10.*", features = ["tls-roots"] }

[build-dependencies]
prost-build = "0.12.*"
tonic-build = "0.10.*"
walkdir = "2.*"
